crates/host-macros/src/snapshots/omnia_host_macros__runtime__tests__expand_command_flag.snap
---
source: crates/host-macros/src/runtime.rs
expression: "expand_pretty(quote!({\n    mode: command, guests:\n    [{ path: \"app.wasm\", command: true }, { path: \"helper.wasm\" },],\n}))"
---
mod runtime {
    use omnia::anyhow::Result;
    use omnia::futures::future;
    use omnia::Server;
    use omnia::tokio;
    use super::*;
    /// This runtime's host wiring, generic over the bundle carrying
    /// its hosts' contexts: the compiled-in bundle under `main` and
    /// `run`, any other under `run_with`.
    pub struct Hooks;
    impl<B> omnia::Wiring<B> for Hooks
    where
        B: Clone + Send + Sync + 'static,
    {
        fn link(deployment: &mut omnia::Deployment<omnia::StoreCtx<B>>) -> Result<()> {
            Ok(())
        }
        async fn serve(runtime: &omnia::Runtime<B>) -> Result<()> {
            let servers: Vec<future::BoxFuture<'_, Result<()>>> = vec![];
            future::try_join_all(servers).await?;
            Ok(())
        }
    }
    /// The deployment compiled in here (`manifest:` or the inline
    /// manifest keys; empty when neither is declared), for an
    /// embedder to overlay before `run_with`.
    pub fn manifest() -> omnia::ManifestSource {
        omnia::ManifestSource::Inline(
            omnia::Manifest::new()
                .guest(
                    omnia::GuestEntry::embedded("app.wasm", include_bytes!("app.wasm"))
                        .command(),
                )
                .guest(
                    omnia::GuestEntry::embedded(
                        "helper.wasm",
                        include_bytes!("helper.wasm"),
                    ),
                ),
        )
    }
    /// Entry point: run the compiled-in deployment through this
    /// runtime's hosts and backends (raw argv passthrough for a
    /// command deployment compiled in here, otherwise the standard
    /// `run` grammar).
    #[tokio::main]
    pub async fn main() -> ::std::process::ExitCode {
        omnia::main::<
            (),
            Hooks,
        >(
                omnia::MainOptions::new(omnia::Mode::Command)
                    .program_name(env!("CARGO_PKG_NAME"))
                    .manifest(manifest()),
            )
            .await
    }
    /// Run one deployment through this runtime's hosts and backends,
    /// blocking until the guest completes.
    #[tokio::main]
    pub async fn run(builder: omnia::DeploymentBuilder) -> Result<omnia::ExitStatus> {
        let deployment = builder
            .mode(omnia::Mode::Command)
            .build::<omnia::StoreCtx<()>>()
            .await?;
        omnia::run::<(), Hooks>(deployment).await
    }
    /// Run one deployment through this runtime's hosts over a bundle
    /// already in hand — nothing connects.
    pub async fn run_with<B>(
        builder: omnia::DeploymentBuilder,
        backends: B,
    ) -> Result<omnia::ExitStatus>
    where
        B: Clone + Send + Sync + 'static,
        Hooks: omnia::Wiring<B>,
    {
        let deployment = builder
            .mode(omnia::Mode::Command)
            .build::<omnia::StoreCtx<B>>()
            .await?;
        omnia::run_with::<B, Hooks>(deployment, backends).await
    }
}
#[allow(unused_imports, reason = "a nested-module invocation uses only some re-exports")]
pub use runtime::{Hooks, main, manifest, run, run_with};
