crates/host-macros/src/snapshots/omnia_host_macros__runtime__tests__expand_connect_options.snap
---
source: crates/host-macros/src/runtime.rs
expression: "expand_pretty(quote!({\n    hosts:\n    {\n        WasiKeyValue: Filesystem(FilesystemOptions::at(\".omnia/storage\")),\n        WasiBlobstore: Filesystem(FilesystemOptions::at(\".omnia/storage\")),\n        WasiOtel: OtelDefault,\n    },\n}))"
---
mod runtime {
    use omnia::anyhow::Result;
    use omnia::futures::future;
    use omnia::Server;
    use omnia::tokio;
    use super::*;
    use omnia::Backend;
    #[derive(Clone)]
    struct Backends {
        filesystem: Filesystem,
        otel_default: OtelDefault,
    }
    impl omnia::Backends for Backends {
        async fn connect() -> Result<Self> {
            let (filesystem, otel_default) = tokio::try_join!(
                < Filesystem as Backend >
                ::connect_with(FilesystemOptions::at(".omnia/storage")), < OtelDefault as
                Backend > ::connect(),
            )?;
            Ok(Self { filesystem, otel_default })
        }
    }
    impl omnia::Provides<WasiKeyValue> for Backends {
        fn borrow(&mut self) -> <WasiKeyValue as omnia::HostCtx>::Borrow<'_> {
            &mut self.filesystem
        }
    }
    impl omnia::Provides<WasiBlobstore> for Backends {
        fn borrow(&mut self) -> <WasiBlobstore as omnia::HostCtx>::Borrow<'_> {
            &mut self.filesystem
        }
    }
    impl omnia::Provides<WasiOtel> for Backends {
        fn borrow(&mut self) -> <WasiOtel as omnia::HostCtx>::Borrow<'_> {
            &mut self.otel_default
        }
    }
    /// This runtime's host wiring, generic over the bundle carrying
    /// its hosts' contexts: the compiled-in bundle under `main` and
    /// `run`, any other under `run_with`.
    pub struct Hooks;
    impl<B> omnia::Wiring<B> for Hooks
    where
        B: Clone + Send + Sync + 'static,
        B: omnia::Provides<WasiKeyValue>,
        B: omnia::Provides<WasiBlobstore>,
        B: omnia::Provides<WasiOtel>,
    {
        fn link(deployment: &mut omnia::Deployment<omnia::StoreCtx<B>>) -> Result<()> {
            deployment.host::<WasiKeyValue, B>()?;
            deployment.host::<WasiBlobstore, B>()?;
            deployment.host::<WasiOtel, B>()?;
            Ok(())
        }
        async fn serve(runtime: &omnia::Runtime<B>) -> Result<()> {
            let servers: Vec<future::BoxFuture<'_, Result<()>>> = vec![
                Box::pin(WasiKeyValue.run(runtime)), Box::pin(WasiBlobstore
                .run(runtime)), Box::pin(WasiOtel.run(runtime)),
            ];
            future::try_join_all(servers).await?;
            Ok(())
        }
    }
    /// The deployment compiled in here (`manifest:` or the inline
    /// manifest keys; empty when neither is declared), for an
    /// embedder to overlay before `run_with`.
    pub fn manifest() -> omnia::ManifestSource {
        omnia::ManifestSource::Inline(omnia::Manifest::new())
    }
    /// Entry point: run the compiled-in deployment through this
    /// runtime's hosts and backends (raw argv passthrough for a
    /// command deployment compiled in here, otherwise the standard
    /// `run` grammar).
    #[tokio::main]
    pub async fn main() -> ::std::process::ExitCode {
        omnia::main::<
            Backends,
            Hooks,
        >(
                omnia::MainOptions::new(omnia::Mode::Server)
                    .program_name(env!("CARGO_PKG_NAME")),
            )
            .await
    }
    /// Run one deployment through this runtime's hosts and backends,
    /// blocking until the guest completes.
    #[tokio::main]
    pub async fn run(builder: omnia::DeploymentBuilder) -> Result<omnia::ExitStatus> {
        let deployment = builder
            .mode(omnia::Mode::Server)
            .build::<omnia::StoreCtx<Backends>>()
            .await?;
        omnia::run::<Backends, Hooks>(deployment).await
    }
    /// Run one deployment through this runtime's hosts over a bundle
    /// already in hand — nothing connects.
    pub async fn run_with<B>(
        builder: omnia::DeploymentBuilder,
        backends: B,
    ) -> Result<omnia::ExitStatus>
    where
        B: Clone + Send + Sync + 'static,
        Hooks: omnia::Wiring<B>,
    {
        let deployment = builder
            .mode(omnia::Mode::Server)
            .build::<omnia::StoreCtx<B>>()
            .await?;
        omnia::run_with::<B, Hooks>(deployment, backends).await
    }
}
#[allow(unused_imports, reason = "a nested-module invocation uses only some re-exports")]
pub use runtime::{Hooks, main, manifest, run, run_with};
